[gd_scene load_steps=9 format=3 uid="uid://mcns7vmyj2u3"]

[ext_resource type="Theme" uid="uid://55h40ru4icdw" path="res://Props/Theme.tres" id="1_227q4"]
[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="2_hwbt6"]
[ext_resource type="Texture2D" uid="uid://dipwtow150kgu" path="res://Sprites/gg1.png" id="3_2roh7"]
[ext_resource type="Texture2D" uid="uid://uh6ci26ll72a" path="res://Sprites/gg2.png" id="4_2ek1i"]
[ext_resource type="Texture2D" uid="uid://bvipaojyvgxe7" path="res://Sprites/gg3.png" id="5_0qdir"]
[ext_resource type="Texture2D" uid="uid://f28mo27febse" path="res://Sprites/gg4.png" id="6_xei6n"]

[sub_resource type="Animation" id="Animation_d7j8x"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("3_2roh7"), ExtResource("4_2ek1i"), ExtResource("5_0qdir"), ExtResource("6_xei6n")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kgxm0"]
_data = {
"Idle": SubResource("Animation_d7j8x")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_227q4")
script = ExtResource("2_hwbt6")

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -180.0
offset_right = 240.0
offset_bottom = -40.0
grow_vertical = 0

[node name="Play" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
focus_mode = 0
text = "Играть"
flat = true
alignment = 0

[node name="Authors" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
focus_mode = 0
text = "Авторы"
flat = true
alignment = 0

[node name="Exit" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
focus_mode = 0
text = "Выход"
flat = true
alignment = 0

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -308.0
offset_top = -370.0
offset_right = -77.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("5_0qdir")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
root_node = NodePath("../..")
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_kgxm0")
}

[node name="TransitionsRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -353.0
offset_top = -342.0
offset_right = 1749.0
offset_bottom = 1069.0
color = Color(0, 0, 0, 0)

[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Authors" to="." method="_on_authors_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_exit_pressed"]
